# gnome-twitter

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build
res/gtk/: main.glade
src/: consts.rs  main.rs
src/res/: resources.xml
src/res/gtk/: main.glade
tests/: test_twitter.rs  tests.rs
